...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteOpacity">
    <FrameLayout
        android:id="@+id/childState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
...
